tests/baselines/reference/privateNamesAndMethods(target=es2022).errors.txt
privateNamesAndMethods.ts(7,5): error TS2564: Property '#_quux' has no initializer and is not definitely assigned in the constructor.


==== privateNamesAndMethods.ts (1 errors) ====
    class A {
        #foo(a: number) {}
        async #bar(a: number) {}
        async *#baz(a: number) {
            return 3;
        }
        #_quux: number;
        ~~~~~~
!!! error TS2564: Property '#_quux' has no initializer and is not definitely assigned in the constructor.
        get #quux (): number {
            return this.#_quux;
        }
        set #quux (val: number) {
            this.#_quux = val;
        }
        constructor () {
            this.#foo(30);
            this.#bar(30);
            this.#baz(30);
            this.#quux = this.#quux + 1;
            this.#quux++;
     }
    }
    
    class B extends A {
        #foo(a: string) {}
        constructor () {
            super();
            this.#foo("str");
        }
    }
    